[package]
name = "etl-updater"
version = "0.1.0"
authors = ["Keith Miller <keithmss@icloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow             = "1.0.53"
flate2             = "1.0.22"
scraper            = "0.12.0"
reqwest            = "0.11.9"
tar                = "0.4.38"
tokio              = { version = "1.16.1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
tracing            = "0.1.30"
tracing-subscriber = "0.3.8"
zip                = "0.5.13"
